--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,18 +51,17 @@
         </receiver>
 
         <activity android:name=".activities.NewTripActivity" />
-        <activity android:name=".activities.RegistrationActivity" />
-        <activity android:name=".activities.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".activities.MainActivity"
             android:noHistory="true"
-            android:theme="@style/Theme.EasyTripPlanner.NoActionBar" />
+            android:autoRemoveFromRecents="true"
+            android:configChanges="navigation|screenSize|keyboardHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
