--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- To request foreground location access, declare one of these permissions. -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <queries>
+
         <!-- show maps -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data android:scheme="geo:latitude,longitude" />
         </intent>
     </queries>
@@ -29,6 +32,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <receiver
+            android:name=".broadcastreceiver.myAlram"
+            android:enabled="true"
+            android:exported="true"></receiver>
+        <receiver
             android:name=".broadcastreceiver.AlarmReceiver"
             android:enabled="true"
             android:exported="true">
@@ -37,7 +44,6 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".NewTripActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
