--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-//    implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
 
+    implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
 
     //Size layout (SDP - a scalable size unit)
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
