--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,9 @@
         <activity
             android:name=".activities.MyDialog"
             android:launchMode="singleInstance"
-            android:theme="@style/Theme.Transparent"
             android:showOnLockScreen="true"
-            android:turnScreenOn="true"/>
+            android:theme="@style/Theme.Transparent"
+            android:turnScreenOn="true" />
 
 
         <receiver
@@ -57,7 +57,8 @@
         </receiver>
 
 
-        <receiver android:name=".services.RestartAlarm"
+        <receiver
+            android:name=".services.RestartAlarm"
             android:enabled="true"
             android:exported="false"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
@@ -68,7 +69,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="navigation|screenSize|keyboardHidden">
+            android:configChanges="navigation|screenSize|keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
