--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="navigation|screenSize|keyboardHidden|orientation">
+            android:configChanges="navigation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
