--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.easytripplanner">
 
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -28,6 +29,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyTripPlanner"
         android:usesCleartextTraffic="true"
+        android:versionCode="01263"
+        android:versionName="0.1"
         tools:targetApi="m">
 
 
