--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.easytripplanner"
+        applicationId "com.myfirstgoogleapp.easytripplanner"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -92,7 +92,6 @@ dependencies {
 
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha06"
-
 
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 
