--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,9 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+
+    // define a BOM and its version
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
